--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -3,6 +3,7 @@
 @import "./partials/typography";
 @import "./partials/base";
 @import "./partials/nav";
+@import "./partials/header";
 @import "./partials/footer";
 
 
