here comes the categories

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -4,6 +4,7 @@
 @import "./partials/base";
 @import "./partials/nav";
 @import "./partials/header";
+@import "./partials/categories";
 @import "./partials/footer";
 
 
