--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -6,5 +6,6 @@
 @import "./partials/header";
 @import "./partials/categories";
 @import "./partials/footer";
+@import "./partials/mediaQueries";
 
 
