add shop page styles and style products section

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -5,7 +5,9 @@
 @import "./partials/nav";
 @import "./partials/header";
 @import "./partials/categories";
+@import "./partials/productsPage";
 @import "./partials/footer";
 @import "./partials/mediaQueries";
+
 
 
