--- a/styles/sass/partials/_base.scss
+++ b/styles/sass/partials/_base.scss
@@ -72,6 +72,7 @@ button {
 }
 
 a {
+	display: inline-block;
 	&.button {
 		color: $primary;
 		background-color: transparent;
@@ -93,4 +94,11 @@ a {
 			color: $solidWhite;
 		}
 	}
+}
+
+// this ensures that image elements obey the dimensions of their parents
+img {
+	// NOTE: this may need to be overwritten in further partials to be a width property (if image is not stretching to take up available space within parent container)
+	max-width: 100%;
+	display: block;
 }
