--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -6,6 +6,7 @@
 @import "./partials/header";
 @import "./partials/categories";
 @import "./partials/productsPage";
+@import "./partials/contact";
 @import "./partials/footer";
 @import "./partials/mediaQueries";
 
