--- a/styles/styles.css
+++ b/styles/styles.css
@@ -593,6 +593,154 @@ header .headerContent .contentContainer {
   color: #084b6d;
 }
 
+.guarantees {
+  background-color: #f9d3d3;
+  position: relative;
+}
+.guarantees h2 {
+  font-size: 0.8rem;
+}
+.guarantees h3 {
+  font-size: 0.6rem;
+  margin: 0;
+}
+.guarantees p {
+  font-size: 0.5rem;
+  line-height: 1rem;
+}
+.guarantees img {
+  width: 30px;
+}
+.guarantees::before {
+  content: "";
+  background-image: url(../assets/wave-3.svg);
+  background-color: #f9d3d3;
+  background-position: top center;
+  background-size: 1500px 60px;
+  background-repeat: repeat-x;
+  position: absolute;
+  height: 3rem;
+  left: 0;
+  right: 0;
+  top: -60px;
+}
+.guarantees ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.guarantees ul li {
+  margin: 0 20px;
+  width: calc(25% - 40px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.mapForm .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.mapForm .wrapper .mapContainer {
+  width: 50%;
+}
+.mapForm .wrapper iframe {
+  width: 100%;
+}
+.mapForm .wrapper .formContainer {
+  width: calc(50% - 70px);
+  margin-left: 70px;
+}
+.mapForm .wrapper .formContainer form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.mapForm .wrapper .formContainer form input, .mapForm .wrapper .formContainer form textarea {
+  padding: 0 0 10px 5px;
+  border: none;
+  margin-bottom: 40px;
+  color: #333;
+  font-family: "Jakarta Sans";
+  border-bottom: 1px solid #eee;
+}
+.mapForm .wrapper .formContainer form input::-webkit-input-placeholder, .mapForm .wrapper .formContainer form textarea::-webkit-input-placeholder {
+  font-size: 0.8rem;
+  color: #084b6d;
+  opacity: 1;
+  line-height: 1.2rem;
+  text-transform: uppercase;
+}
+.mapForm .wrapper .formContainer form input::-moz-placeholder, .mapForm .wrapper .formContainer form textarea::-moz-placeholder {
+  font-size: 0.8rem;
+  color: #084b6d;
+  opacity: 1;
+  line-height: 1.2rem;
+  text-transform: uppercase;
+}
+.mapForm .wrapper .formContainer form input:-ms-input-placeholder, .mapForm .wrapper .formContainer form textarea:-ms-input-placeholder {
+  font-size: 0.8rem;
+  color: #084b6d;
+  opacity: 1;
+  line-height: 1.2rem;
+  text-transform: uppercase;
+}
+.mapForm .wrapper .formContainer form input::-ms-input-placeholder, .mapForm .wrapper .formContainer form textarea::-ms-input-placeholder {
+  font-size: 0.8rem;
+  color: #084b6d;
+  opacity: 1;
+  line-height: 1.2rem;
+  text-transform: uppercase;
+}
+.mapForm .wrapper .formContainer form input::placeholder, .mapForm .wrapper .formContainer form textarea::placeholder {
+  font-size: 0.8rem;
+  color: #084b6d;
+  opacity: 1;
+  line-height: 1.2rem;
+  text-transform: uppercase;
+}
+.mapForm .wrapper .formContainer form input textarea, .mapForm .wrapper .formContainer form textarea textarea {
+  min-height: 130px;
+  border: 1px solid #eee;
+  border-top: none;
+}
+.mapForm .wrapper .formContainer form select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  display: block;
+  color: #084b6d;
+  padding: 0 0 10px 0;
+  border: none;
+  border-bottom: 1px solid #eee;
+  border-radius: 0;
+  margin-bottom: 40px;
+  width: 100%;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  line-height: 1.2rem;
+  background-color: #fff;
+  background-image: url(../assets/caret-down-solid.svg);
+  background-repeat: no-repeat;
+  background-position: 95% center;
+  background-size: 20px;
+}
+
 footer {
   background-color: #084b6d;
   color: #fff;
